--- a/2. Vanilla Javascript/10 - Key Sequence Detection/index-FINISHED.html
+++ b/2. Vanilla Javascript/10 - Key Sequence Detection/index-FINISHED.html
@@ -8,7 +8,7 @@
 <body>
 <script>
 const pressed = [];
-const secretCode = 'wesbos';
+const secretCode = 'simon';
 
 window.addEventListener('keyup', (e) => {
   console.log(e.key);
